# soroban-cron

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DRIPS_WAVE_SUBMISSION.md  Dockerfile  LICENSE  PLAN.md  PRODUCTION_CHECKLIST.md  QUICK_REFERENCE.md  README.md  WAVE_PLAN.md
.github/workflows/: ci.yml
chronos-types/: Cargo.toml
chronos-types/src/: lib.rs
docs/: node-operator-guide.md  protocol-spec.md
specs/chronos-keeper-network/: .config.kiro  design.md  requirements.md  tasks.md
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: common.rs  test_designated_execution.rs  test_grace_period.rs  test_post_grace.rs  test_slashing.rs  test_task_provisioning.rs
the-anchor/: Cargo.toml
the-anchor/src/: errors.rs  events.rs  execution.rs  lib.rs  registry.rs  slashing.rs  storage_keys.rs  tasks.rs
the-engine/: Cargo.toml  build.rs
the-engine/src/: config.rs  errors.rs  execution_pipeline.rs  grace_monitor.rs  health_server.rs  in_flight.rs  ledger_poller.rs  main.rs  rpc_client.rs  task_discovery.rs
