[package]
name = "chronos-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared canonical types for the Chronos Keeper Network"

[features]
# Enable this feature when building for Soroban/WASM targets.
# Gates the soroban-sdk dependency and #[contracttype] annotations.
contract = ["dep:soroban-sdk"]

[dependencies]
soroban-sdk = { version = "21.7.6", optional = true }
